--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         }
         .header h2{
             color:white;
+            position: center;
+            top: 45px;
+            left: 25px;
             line-height: 100px;
             text-transform: uppercase;
         }
